fix home spacing

--- a/frontend/src/components/homepage/homepage.css
+++ b/frontend/src/components/homepage/homepage.css
@@ -25,7 +25,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   padding-right: 5%;
   padding-left: 5%;
 }
